--- a/GreenMarketBackend/Views/Shared/_NavBar.cshtml
+++ b/GreenMarketBackend/Views/Shared/_NavBar.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - GreenMarketBackend</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8c34403282.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.2/signalr.min.js"></script>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
@@ -75,5 +76,48 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script>
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl("/chatHub")
+            .build();
+
+        // Handle receiving messages
+        connection.on("ReceiveMessage", function (sessionId, user, message) {
+            if (document.hidden) {  // Show notification if user is not on the page
+                alert("You have a new message from " + user);
+            }
+        });
+
+        // Handle unread messages counter update
+        connection.on("UpdateUnreadMessagesCount", function (count) {
+            const chatLink = document.querySelector('.nav-link[asp-controller="Chat"]');
+            let counter = chatLink.querySelector('.unread-counter');
+
+            if (!counter) {
+                counter = document.createElement('span');
+                counter.classList.add('unread-counter');
+                counter.style.cssText = `
+                            background: red;
+                            color: white;
+                            border-radius: 50%;
+                            padding: 2px 6px;
+                            margin-left: 5px;
+                        `;
+                chatLink.appendChild(counter);
+            }
+
+            counter.textContent = count;
+
+            // Hide the counter if count is 0
+            if (count === 0) {
+                counter.style.display = 'none';
+            } else {
+                counter.style.display = 'inline';
+            }
+        });
+
+        // Start the SignalR connection
+        connection.start().then(() => console.log('Connected to hub')).catch(err => console.error('Error connecting to hub:', err));
+    </script>
 </body>
 </html>
