--- a/GreenMarketBackend/Views/Products/Details.cshtml
+++ b/GreenMarketBackend/Views/Products/Details.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Product Details";
     Layout = "_NavBar";
 }
+<head>
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+</head>
 
 <div class="container mt-5">
     <div class="row">
