--- a/GreenMarketBackend/Views/Products/Index.cshtml
+++ b/GreenMarketBackend/Views/Products/Index.cshtml
@@ -17,7 +17,9 @@
         </div>
     </div>
 @* } *@
-
+<head>
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+</head>
 <body>
     <div class="container my-5" id="products">
         <h2 class="text-center mb-4">Our Products</h2>
